--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: Code for America 2013 Annual Report
+title: Code for America 2014 Annual Report
 ---
 
 <div id="loading">
   <img src="img/CfA_logo_white.png" />
-  <h1>2013</h1> 
+  <h1>2013</h1>
   <p>Annual Report</p>
 </div>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#"><img class="cfalogo" src="img/cfa_logo.png" alt="Code for America logo" /></a>
+      <a class="brand" href="#"><img class="cfalogo" src="img/CFJ_logo_white.png" alt="Code for Japan logo" /></a>
       <!-- Everything you want hidden at 940px or less, place within here -->
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -47,7 +47,7 @@ title: Code for America 2013 Annual Report
 <div class="pagebg {{ p.pagetype }} {{ p.image }}" style="background-color:#{{ p.bgcolor }};" >
 </div>
 {% endif %}
-{% endfor %}  
+{% endfor %}
 
 
 <div id="page">
@@ -56,7 +56,7 @@ title: Code for America 2013 Annual Report
     {% for p in site.posts %}
 
     <div class="sidebartitle" >
-      <h1>2013</h1>
+      <h1>2014</h1>
       {% if p.title != "stats" %}
       <h2>{{ p.title }} <br/>
       {% if p.icon %}
@@ -68,16 +68,16 @@ title: Code for America 2013 Annual Report
     </div>
 
     {% endfor %}
-    
+
   </div>
-  
+
   {% for p in site.posts %}
 
   {% if p.url != "/index.html" %}
   <a name="{{ p.section }}"></a>
   <div class="page {{ p.pagetype }}" style="background-color:#{{ p.bgslide }};padding-top:{{ p.extrapadding }}" data-section="nav{{ p.section }}">
     {{ p.content | markdownify }}
-    <div class="clear"></div>  
+    <div class="clear"></div>
   </div>
   {% endif %}
   {% endfor %}
@@ -85,11 +85,8 @@ title: Code for America 2013 Annual Report
 </div>
 
 <div class="sharebutton">
-  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://2013.codeforamerica.org">Tweet</a>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://2014.code4japan.org">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   <div></div>
-  <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2F2013.codeforamerica.org&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+  <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2F2014.code4japan.org&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
 </div>
-
-
-
