Changed home text

--- a/_posts/2013-02-10-home.html
+++ b/_posts/2013-02-10-home.html
@@ -1,16 +1,19 @@
 ---
 layout: fullpage
 title: Quote 1
-image: imagegood_governance
-pagetype: homeQuote quote 
+image: cfjbirthday
+pagetype: homeQuote quote
 ---
 
 <div class="intropage">
-	<h1>Good governance<br>
-	and good policy<br>
-	are now inextricably<br>
-	linked to the digital.</h1>
-	<br>
-	<p>Tom Steinberg</p>
-	<p><i>Founder of mySociety</i></p>
+  <div class="topquote">
+    <h1>ともに考え、ともにつくる</h1>
+    <p>
+      この考えに多く方の々に賛同いただき、2013年の頭には想像もしていなかったほどの多くのチャレンジをさせていただきました。これからも、テクノロジーは世界をより良い場所にできると信じる人々と、自分達の住む場所を自分達の手で良くしたいと思う人々がつながる場所であり続けたいと思います。引き続きご支援ください！
+      <br>
+    </p>
+    <p>関　治之</p>
+    <p><i>一般社団法人コード・フォー・ジャパン 代表理事</i>
+    </p>
+  </div>
 </div>
