--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Code for America 2014 Annual Report
+title: Code for Japan 2014 Annual Report
 ---
 
 <div id="loading">
-  <img src="img/CfA_logo_white.png" />
-  <h1>2013</h1>
+  <img src="img/CfJ_logo.png" />
+  <h1>2014</h1>
   <p>Annual Report</p>
 </div>
 
