fixed logo path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Code for Japan 2014 Annual Report
 ---
 
 <div id="loading">
-  <img src="img/CfJ_logo.png" />
+  <img src="img/CFJ_logo.png" />
   <h1>2014</h1>
   <p>Annual Report</p>
 </div>
